@@ -99,6 +99,8 @@ wxENUM_MEMBER( wxFONTENCODING_CP1254 )
 wxENUM_MEMBER( wxFONTENCODING_CP1255 )
 wxENUM_MEMBER( wxFONTENCODING_CP1256 )
 wxENUM_MEMBER( wxFONTENCODING_CP1257 )
+wxENUM_MEMBER( wxFONTENCODING_CP1258 )
+wxENUM_MEMBER( wxFONTENCODING_CP1361 )
 wxENUM_MEMBER( wxFONTENCODING_CP12_MAX )
 wxENUM_MEMBER( wxFONTENCODING_UTF7 )
 wxENUM_MEMBER( wxFONTENCODING_UTF8 )
